--- a/src/index.css
+++ b/src/index.css
@@ -26,11 +26,16 @@ html{
 }
 
 body{
-   font-size: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2rem;
 }
 
 ul{
    margin: 0;
    padding: 0;
    list-style: none;
+}
+
+h1, h2, h3{
+   margin: 0;
 }
