--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 .user-page{
   background: url('assets/user-hero.jpg') center center;
   background-size: cover;
+  padding-bottom: 2rem;
 }
 
 .wrapper{
@@ -32,15 +33,17 @@
 }
 
 .button{
-   padding: 1.3rem 4rem;
-   border-radius: 5px;
-   cursor: pointer;
-   display: inline-block;
-   text-align: center;
-   font-weight: bold;
-   text-transform: uppercase;
-   background: #ffffff;
-   width: 30%;
+    padding: 1.3rem 4rem;
+    border-radius: 5px;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: #000000;
+    color: #ffffff;
+    border: #000000;
+    width: 23rem;
 }
 
 .btn-user{
@@ -51,8 +54,8 @@
 
 .button:hover{
    border: #000000;
-   background: #000000;
-   color: #ffffff;
+   background: #ffffff;
+   color: #000000;
 }
 
 .landing{
@@ -175,7 +178,7 @@
 }
 
 .habit-list{
-  margin-top: 4rem;  
+  margin-top: 3rem;  
 }
 
 .day-name, .day-no{
@@ -186,7 +189,7 @@
   margin-left: 1rem;
 }
 
-.hide{
+/* .hide{
   position: absolute;
   opacity: 0;
   height: 0;
@@ -198,4 +201,99 @@
   position: static;
   height: auto;
   width: auto;
+} */
+
+.label-text{
+  font-weight: bold;
+  color: #ffffff;
+  font-size: 2.2rem;
+}
+
+.input-text{
+  display: block;
+  width: 100%;
+  border: 0;
+  border-radius: 5px;
+  padding: 1rem;
+  background: #000000;
+  color: #ffffff;
+  margin: 1rem 0;
+}
+
+.input-text::-webkit-input-placeholder{ /* Chrome/Opera/Safari */
+   color: #ffffff;
+}
+
+.input-text::-moz-placeholder{ /* Firefox 19+ */
+  color: #ffffff;
+  opacity: 1;
+}
+
+.mobile-logout{
+  display: none;
+  cursor: pointer;
+  font-size: 4rem;
+}
+
+.mobile-logout:hover{
+  color: #ffffff;
+}
+
+
+/* Responsive Styles */
+@media (min-width: 1600px) {
+  .app-header{
+    font-size: 10rem;
+  }
+}
+
+/* @media (max-width: 940px) {
+}
+
+@media (max-width: 768px) {
+} */
+
+@media (max-width: 650px) {
+  .app-header{
+    font-size: 6rem;
+  } 
+  .day-name, .day-no{
+    font-size: 1.5rem;
+  }
+
+  .desk-logout{
+    display: none;
+  }
+
+  .mobile-logout{
+    display: block;
+  }
+}
+
+@media (max-width: 480px) {
+  .app-header{
+    font-size: 4.5rem;
+  }
+  .page-header{
+    font-size: 4rem;
+  }
+  .landing{
+    padding-top: 0;
+    justify-content: center;
+  } 
+  .mobile-logout{
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 350px) {
+  .app-header{
+    font-size: 3rem;
+  } 
+  .page-header{
+    font-size: 3.5rem;
+  }
+  .day-name, .day-no{
+    font-size: 1.3rem;
+  }
 }
